# Rodney

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  clonepackages  createlinks  package.xml
arduino/: README.md
config/: amcl_config.yaml  base_local_planner_params.yaml  config.yaml  costmap_common_params.yaml  global_costmap_params.yaml  imu_calib.yaml  imu_filter_config.yaml  laser_filter_config.yaml  local_costmap_params.yaml  robot_localization.yaml
docs/: 01 Introduction.md  02 ROS and the Pi  02 ROS and the Pi.md  03 Design Goal 1.md  04 Design Goal 1 Part 1.md  04 Design Goal 1 Part 2.md  04 Mission 1 Design Goal 1 Part 1.md  05 Design Goal 1 Part 3.md  05 Missions.md  06 Mission 1 Design Goal 1 Part 3.md  07 Mission 1 Design Goal 1 Part 4.md  index.md
docs/images/: Rodney.fzz
hardware/: bom.csv
include/rodney/: rodney_node.h
launch/: cal_imu.launch  gazebo.launch  remote.launch  rodney.launch  rviz.launch  sim.launch
maps/: ground_floor.pgm  ground_floor.yaml  old_second_floor.pgm  second_floor.pgm  second_floor.yaml  second_floor_patrol.yaml
meshes/: displayBracket.dae  fwdPlatform.dae  headFixing.dae  headPanBracket.dae  headTiltArm.dae  rodneyBase.dae  rplidar.dae  smallRearPlatform.dae
rodney_control/: ArduinoHardware.h  README.md  rodney_control.ino  ros.h
rviz/: urdf.rviz
scripts/: clonepackages.sh  create_udev_rules.sh  createlinks.sh  delete_udev_rules.sh  rodney-base.service  rodney_udev.rules  startup.sh
src/: remote_heartbeat_node.cpp  rodney_node.cpp  static_broadcaster.py
urdf/: rodney.urdf  rodney.xacro
web_control/: rodneycontrol.html
