<?xml version="1.0"?>
<package format="2">
  <name>rodney</name>
  <version>0.3.1</version>
  <description>The rodney package including the main control node</description>

  <maintainer email="philip@thehopleys.me.uk">Philip Hopley</maintainer>

  <license>BSD</license>

  <author email="philip@thehopleys.me.uk">Philip Hopley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  
  <build_depend>keyboard</build_depend>
  
  <exec_depend>keyboard</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
