<?xml version="1.0"?>
<package format="2">
  <name>rodney</name>
  <version>1.2.0</version>
  <description>The rodney package including the main control node</description>

  <maintainer email="sleepyserver6@gmail.com">Philip Hopley</maintainer>

  <license>Apache 2</license>

  <author email="sleepyserver6@gmail.com">Philip Hopley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  
  <build_depend>keyboard</build_depend>
  <build_depend>pi_io</build_depend>
  
  <exec_depend>keyboard</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
